--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "setrun/setrun-sys": "*"
     },
